[package]
name = "jwt-decode"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.72.0"
authors = ["Kristof Mattei"]
description = "Rust end-to-end application"
license-file = "LICENSE"
categories = ["starter", "end-to-end"]
keywords = ["integrity", "end-to-end", "starter", "docker", "release"]
repository = "https://github.com/kristof-mattei/jwt-decode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coverage = []

[dependencies]
base64 = "0.21.4"
color-eyre = { version = "0.6.2", features = ["issue-url"] }
serde_json = "1.0.107"

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_arch = "x86_64", target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
