[package]
name = "jwt-decode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
mimalloc = { version = "0.1.48", features = ["v3"] }
serde_json = "1.0.149"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
